--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>diegobraceroweb</title>
     <!--GOOGLE FONTS-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
+
+    <!--javascript-->
+    <script type="text/javascript" src="js/main.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
     <!--Bootstrap 4-->  
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -17,7 +20,7 @@
 <body>
     <!--NAVBAR-->
     <!--<nav class="navbar navbar-expand-lg navbar-light bg-light" > -->
-        <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
+    <nav class="navbar navbar-expand-lg fixed-top" style="background-color: #e3f2fd; ">
             <div class="container">
                 <a class="navbar-brand" href="#">Diego Bracero Web</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,30 +32,26 @@
                     <a class="nav-link" href="#header">Inicio<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Información</a>
+                        <a class="nav-link" href="#info-one">Información</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contacto</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Tienda</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
-                    </li>
-                    <!--<li class="nav-item dropdown">
-                        <!<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Más
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Redes</a>
-                            <a class="dropdown-item" href="#">Contacto</a>
+                            <a class="dropdown-item" href="#">Redes Sociales</a>
+                            <a class="dropdown-item" href="#">Portafolio</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                            <a class="dropdown-item" href="#">Hoja de vida</a>
                         </div>
                         </li>
-                        <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li>-->
                 </ul>
-                </div>
         </div>
     </nav>
 
@@ -90,15 +89,79 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="info-left">
-                        <img src="img/web2.png" style="width: 90%;"  alt="">
+                        <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis labore nemo error, cumque magni aperiam fuga quasi vel consequatur tempora perferendis at voluptatibus ut veritatis inventore optio quo tenetur suscipit?</h2>
+                        <a href="#" class="btn btn-outline-secondary">Leer más</a>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    
+                <div class="col-md-6 my-auto">
+                    <div class="info-right">
+                        <img src="img/web2.png" style="width: 90%;"  alt="">
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <!--INFO TWO-->
+    <section id="info-two" style="background:  #e3f2fd;"> 
+        <div class="container">
+            <div class="row my-5">
+                <div class="col-md-6">
+                    <h2>Lorem, ipsum dolor.</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed incidunt explicabo, doloribus vel eveniet harum fugiat, quis iusto ex veritatis tenetur numquam, voluptas corporis fuga. Explicabo inventore unde ut voluptatem!</p>
+                </div>
+                <div class="col-md-6">
+                    <h2>Lorem, ipsum dolor.</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed incidunt explicabo, doloribus vel eveniet harum fugiat, quis iusto ex veritatis tenetur numquam, voluptas corporis fuga. Explicabo inventore unde ut voluptatem!</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5">
+                    <form class="my-4">
+                        <h2>Contacto</h2>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">Nombre</label>
+                            <input type="text" class="form-control" id="exampleFormControlInput2" placeholder="">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">Email</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="email@ejemplo.com">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlTextarea1">Mensaje</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="8"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-outline-secondary">Enviar</button>
+                        </form>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!--script-->
+
+    <script>
+        window.sr = ScrollReveal();
+    sr.reveal('.navbar',{
+    duration: 2000,
+    origin: 'botton'
+    });
+    sr.reveal('.header-content-left',{
+    duration: 2000,
+    origin: 'top',
+    distance: '300px'
+    });
+    sr.reveal('.header-content-right',{
+    duration: 2000,
+    origin: 'right',
+    distance: '300px'
+    });
+    </script>
 
     <!--bootstrap 4 scripts-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
