--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </header>
 
     <!--Testimonial-->
-    <section id="testimonial">
+    <section id="testimonial" class="testimonial">
         <div class="container">
             <p class="h2 mb-2">"De las mejores opciones para tener presencia online"</p>
             <p class="h4"> -Armando Díaz </p>
@@ -90,7 +90,7 @@
                 <div class="col-md-6">
                     <div class="info-left">
                         <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis labore nemo error, cumque magni aperiam fuga quasi vel consequatur tempora perferendis at voluptatibus ut veritatis inventore optio quo tenetur suscipit?</h2>
-                        <a href="#" class="btn btn-outline-secondary">Leer más</a>
+                        <a href="#" class="btn btn-outline-secondary header-btn">Leer más</a>
                     </div>
                 </div>
                 <div class="col-md-6 my-auto">
@@ -161,8 +161,42 @@
     origin: 'right',
     distance: '300px'
     });
+    sr.reveal('.header-btn',{
+    duration: 2000,
+    origin: 'botton',
+    delay: 1000
+    });
+
+    sr.reveal('.testimonial',{
+    duration: 2000,
+    origin: 'left',
+    distance: '300px'
+    });
+
+    sr.reveal('.info-left',{
+    duration: 2000,
+    origin: 'left',
+    distance: '300px'
+    });
+    sr.reveal('.info-right',{
+    duration: 2000,
+    origin: 'right',
+    distance: '300px'
+    });
+
+    //SMOOT SCROLLING
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+    anchor.addEventListener('click', function (e) {
+        e.preventDefault();
+
+            document.querySelector(this.getAttribute('href')).scrollIntoView({
+            behavior: 'smooth'
+            });
+        });
+    });
     </script>
 
+    
     <!--bootstrap 4 scripts-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
