--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="header-content-right">
-                        <h1>¿Necesitas una pagina web?</h1>
+                        <h1>¿Necesitas una página web?</h1>
                         <p> Ofrezco soluciones integrales a empresas y profesionales de cara a crear su imagen digital y a conectar con sus usuarios, ya sea mediante grandes o pequeños presupuestos.</p>
                         <a href="#" class="btn btn-outline-secondary">Ver más</a>
                     </div>
