Error en version movil - diseño responsivo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg fixed-top" style="background-color: #e3f2fd; ">
             <div class="container">
                 <a class="navbar-brand" href="#">Diego Bracero Web</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler navbar-dark " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -67,7 +67,7 @@
                 <div class="col-md-6">
                     <div class="header-content-right">
                         <h1>¿Necesitas una página web?</h1>
-                        <p> Ofrezco soluciones integrales a empresas y profesionales de cara a crear su imagen digital y a conectar con sus usuarios, ya sea mediante grandes o pequeños presupuestos.</p>
+                        <p> Ofrezco soluciones integrales y profesionales de cara a crear su imagen digital y a conectar con sus usuarios, ya sea mediante grandes o pequeños presupuestos.</p>
                         <a href="#" class="btn btn-outline-secondary">Ver más</a>
                     </div>
                 </div>
