Imagenes si  copy

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     <!--<nav class="navbar navbar-expand-lg navbar-light bg-light" > -->
     <nav class="navbar navbar-expand-lg fixed-top" style="background-color: #e3f2fd; ">
             <div class="container">
-                <a class="navbar-brand" href="#">Diego Bracero Web</a>
+                <a class="navbar-brand" href="#">
+                    <img src="img-nc/keyboard-2104009_640.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+                    Diego Bracero Web
+                </a>
                 <button class="navbar-toggler navbar-dark " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -61,13 +64,13 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="header-content-left">
-                        <img src="img/web1.png" style="width: 100%;">
+                        <img src="img-nc/webdesign-3411373_1920.jpg" style="width: 100%;">
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="header-content-right">
                         <h1>¿Necesitas una página web?</h1>
-                        <p> Ofrezco soluciones integrales y profesionales de cara a crear su imagen digital y a conectar con sus usuarios, ya sea mediante grandes o pequeños presupuestos.</p>
+                        <p style="text-align:justify"> Ofrezco soluciones integrales y profesionales de cara a crear su imagen digital y a conectar con sus usuarios, ya sea mediante grandes o pequeños presupuestos.</p>
                         <a href="#" class="btn btn-outline-secondary">Ver más</a>
                     </div>
                 </div>
@@ -89,13 +92,13 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="info-left">
-                        <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis labore nemo error, cumque magni aperiam fuga quasi vel consequatur tempora perferendis at voluptatibus ut veritatis inventore optio quo tenetur suscipit?</h2>
+                        <h2 style="text-align:justify">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis labore nemo error, cumque magni aperiam fuga quasi vel consequatur tempora perferendis at voluptatibus ut veritatis inventore optio quo tenetur suscipit?</h2>
                         <a href="#" class="btn btn-outline-secondary header-btn">Leer más</a>
                     </div>
                 </div>
                 <div class="col-md-6 my-auto">
                     <div class="info-right">
-                        <img src="img/web2.png" style="width: 90%;"  alt="">
+                        <img src="img-nc/programmer-1653351_1280.png" style="width: 100%;"  id="img2">
                     </div>
                 </div>
             </div>
@@ -108,11 +111,11 @@
             <div class="row my-5">
                 <div class="col-md-6">
                     <h2>Lorem, ipsum dolor.</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed incidunt explicabo, doloribus vel eveniet harum fugiat, quis iusto ex veritatis tenetur numquam, voluptas corporis fuga. Explicabo inventore unde ut voluptatem!</p>
+                    <p style="text-align:justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed incidunt explicabo, doloribus vel eveniet harum fugiat, quis iusto ex veritatis tenetur numquam, voluptas corporis fuga. Explicabo inventore unde ut voluptatem!</p>
                 </div>
                 <div class="col-md-6">
                     <h2>Lorem, ipsum dolor.</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed incidunt explicabo, doloribus vel eveniet harum fugiat, quis iusto ex veritatis tenetur numquam, voluptas corporis fuga. Explicabo inventore unde ut voluptatem!</p>
+                    <p style="text-align:justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed incidunt explicabo, doloribus vel eveniet harum fugiat, quis iusto ex veritatis tenetur numquam, voluptas corporis fuga. Explicabo inventore unde ut voluptatem!</p>
                 </div>
             </div>
         </div>
