cambio de imagenes y botones

--- a/index.html
+++ b/index.html
@@ -64,14 +64,15 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="header-content-left">
-                        <img src="img-nc/webdesign-3411373_1920.jpg" style="width: 100%;">
+                        <img src="img-nc/web-design-4875186_960_720.jpg" style="width: 100%;">
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="header-content-right">
                         <h1>¿Necesitas una página web?</h1>
                         <p style="text-align:justify"> Ofrezco soluciones integrales y profesionales de cara a crear su imagen digital y a conectar con sus usuarios, ya sea mediante grandes o pequeños presupuestos.</p>
-                        <a href="#" class="btn btn-outline-secondary">Ver más</a>
+                        <!--<a href="#" class="btn btn-outline-secondary">Ver más</a> -->
+                        <button type="button" class="btn btn-outline-info">Ver más</button>
                     </div>
                 </div>
             </div>
@@ -93,12 +94,13 @@
                 <div class="col-md-6">
                     <div class="info-left">
                         <h2 style="text-align:justify">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis labore nemo error, cumque magni aperiam fuga quasi vel consequatur tempora perferendis at voluptatibus ut veritatis inventore optio quo tenetur suscipit?</h2>
-                        <a href="#" class="btn btn-outline-secondary header-btn">Leer más</a>
+                        <!--<a href="#" class="btn btn-outline-secondary header-btn">Leer más</a>-->
+                        <button type="button" class="btn btn-outline-info">Leer más</button>
                     </div>
                 </div>
                 <div class="col-md-6 my-auto">
                     <div class="info-right">
-                        <img src="img-nc/programmer-1653351_1280.png" style="width: 100%;"  id="img2">
+                        <img src="img-nc/mobile-devices-2017980_1280.png" style="width: 100%;"  id="img2">
                     </div>
                 </div>
             </div>
@@ -139,7 +141,7 @@
                             <label for="exampleFormControlTextarea1">Mensaje</label>
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="8"></textarea>
                         </div>
-                        <button type="submit" class="btn btn-outline-secondary">Enviar</button>
+                        <button type="submit" class="btn btn-outline-light">Enviar</button>
                         </form>
                 </div>
             </div>
