--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg fixed-top" style="background-color: #e3f2fd; ">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="img-nc/keyboard-2104009_640.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+                    <img src="img-nc/d-1935811_1920.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
                     Diego Bracero Web
                 </a>
                 <button class="navbar-toggler navbar-dark " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -127,23 +127,36 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5">
-                    <form class="my-4">
-                        <h2>Contacto</h2>
-                        <div class="form-group">
-                            <label for="exampleFormControlInput1">Nombre</label>
-                            <input type="text" class="form-control" id="exampleFormControlInput2" placeholder="">
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleFormControlInput1">Email</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="email@ejemplo.com">
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleFormControlTextarea1">Mensaje</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="8"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-outline-light">Enviar</button>
-                        </form>
                 </div>
+                <section id="info-two">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <form class="my-4">
+                                    <h2>Contacto</h2>
+                                    <div class="form-group">
+                                        <label for="exampleFormControlInput1">Nombre</label>
+                                        <input type="text" class="form-control" id="exampleFormControlInput2" placeholder="">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="exampleFormControlInput1">Email</label>
+                                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="email@ejemplo.com">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="exampleFormControlTextarea1">Mensaje</label>
+                                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="8"></textarea>
+                                    </div>
+                                    <button type="submit" class="btn btn-outline-light">Enviar</button>
+                                </form>
+                            </div>
+                            <div class="col-md-6 my-auto">
+                                <div class="info-right">
+                                    <img src="img-nc/d-1935811_1920.png" style="width: 80%;"  id="logo">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
         </div>
     </footer>
