Tabla de proyectos agregado

--- a/index.html
+++ b/index.html
@@ -35,13 +35,16 @@
                     <a class="nav-link" href="#header">Inicio<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#info-one">Información</a>
+                        <a class="nav-link" href="#testimonial">Información</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#info-one">Sobre mi</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Tienda</a>
+                        <a class="nav-link" href="#">Tienda de diseños</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -64,15 +67,17 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="header-content-left">
-                        <img src="img-nc/web-design-4875186_960_720.jpg" style="width: 100%;">
+                        <img src="img-nc/web-design-4875186_960_720.jpg" style="width: 80%;">
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="header-content-right">
-                        <h1>¿Necesitas una página web?</h1>
-                        <p style="text-align:justify"> Ofrezco soluciones integrales y profesionales de cara a crear su imagen digital y a conectar con sus usuarios, ya sea mediante grandes o pequeños presupuestos.</p>
+                        <h2>¿Necesitas una página web?</h2>
+                        <h4 style="text-align:justify"> 
+                            Te ofrezco soluciones profesionales en la creación de tu sitio web de cara a crear tu imagen digital o la de tu empresa / servicio y a conectar con tus usuarios, ya sea mediante grandes o pequeños presupuestos según tus necesidades o puedes visitar mi tienda de diseños para ser personalizados.
+                        </h4>
                         <!--<a href="#" class="btn btn-outline-secondary">Ver más</a> -->
-                        <button type="button" class="btn btn-outline-info">Ver más</button>
+                        <button type="button" class="btn btn-outline-info">Ver tienda</button>
                     </div>
                 </div>
             </div>
@@ -81,9 +86,66 @@
 
     <!--Testimonial-->
     <section id="testimonial" class="testimonial">
+        <h1>Proyectos</h1>
         <div class="container">
-            <p class="h2 mb-2">"De las mejores opciones para tener presencia online"</p>
-            <p class="h4"> -Armando Díaz </p>
+            <div class="shadow p-3 mb-5 bg-white rounded">
+            <div class="card-group">
+                <div class="card">
+                    <img src="img-nc/web-static.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title">Página Web Básica</h5>
+                    <p class="card-text" style="text-align:justify">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <ul class="list-group" style="text-align: left;">
+                        <li class="list-group-item">Cras justo odio</li>
+                        <li class="list-group-item">Dapibus ac facilisis in</li>
+                        <li class="list-group-item">Morbi leo risus</li>
+                        </ul>
+                    <p class="card-text"><small class="text-muted">Costo base 300$</small></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img-nc/paginaweb.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title">Página Web Completa</h5>
+                    <p class="card-text" style="text-align:justify">This card has supporting text below as a natural lead-in to additional content.</p>
+                    <ul class="list-group" style="text-align: left;">
+                        <li class="list-group-item">Cras justo odio</li>
+                        <li class="list-group-item">Dapibus ac facilisis in</li>
+                        <li class="list-group-item">Morbi leo risus</li>
+                        <li class="list-group-item">Porta ac consectetur ac</li>
+                        </ul>
+                    <p class="card-text"><small class="text-muted">Costo base 500$</small></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img-nc/appweb.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title">Aplicación Web</h5>
+                    <p class="card-text" style="text-align:justify">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    <ul class="list-group" style="text-align: left;">
+                        <li class="list-group-item">Cras justo odio</li>
+                        <li class="list-group-item">Dapibus ac facilisis in</li>
+                        <li class="list-group-item">Morbi leo risus</li>
+                        <li class="list-group-item">Porta ac consectetur ac</li>
+                        <li class="list-group-item">Vestibulum at eros</li>
+                        </ul>
+                    <p class="card-text"><small class="text-muted">Costo base 1000$</small></p>
+                    </div>
+                </div>
+                </div>
+            <!--<div class="row my-5">
+                <div class="col-md-6">
+                    <h2>Sitio Web Estatico</h2>
+                    <p style="text-align:justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed incidunt explicabo, doloribus vel eveniet harum fugiat, quis iusto ex veritatis tenetur numquam, voluptas corporis fuga. Explicabo inventore unde ut voluptatem!</p>
+                    <button type="button" class="btn btn-warning">Solicitar</button>
+                </div>
+                <div class="col-md-6">
+                    <h2>Aplicación web</h2>
+                    <p style="text-align:justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed incidunt explicabo, doloribus vel eveniet harum fugiat, quis iusto ex veritatis tenetur numquam, voluptas corporis fuga. Explicabo inventore unde ut voluptatem!</p>
+                    <button type="button" class="btn btn-warning">Solicitar</button>
+                </div>
+            </div>-->
+        </div>
         </div>
     </section>
 
@@ -93,14 +155,15 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="info-left">
-                        <h2 style="text-align:justify">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis labore nemo error, cumque magni aperiam fuga quasi vel consequatur tempora perferendis at voluptatibus ut veritatis inventore optio quo tenetur suscipit?</h2>
+                        <h2>Hola soy Diego diseñador web freelance</h2>
+                        <h4 style="text-align:justify">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis labore nemo error, cumque magni aperiam fuga quasi vel consequatur tempora perferendis at voluptatibus ut veritatis inventore optio quo tenetur suscipit?</h4>
                         <!--<a href="#" class="btn btn-outline-secondary header-btn">Leer más</a>-->
                         <button type="button" class="btn btn-outline-info">Leer más</button>
                     </div>
                 </div>
                 <div class="col-md-6 my-auto">
                     <div class="info-right">
-                        <img src="img-nc/programmer-1653351_1280.png" style="width: 100%;"  id="img2">
+                        <img src="img-nc/student-849825_960_720.webp" style="width: 100%;"  id="img2">
                     </div>
                 </div>
             </div>
@@ -112,12 +175,14 @@
         <div class="container">
             <div class="row my-5">
                 <div class="col-md-6">
-                    <h2>Lorem, ipsum dolor.</h2>
+                    <h2>Trabajos realizados</h2>
                     <p style="text-align:justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed incidunt explicabo, doloribus vel eveniet harum fugiat, quis iusto ex veritatis tenetur numquam, voluptas corporis fuga. Explicabo inventore unde ut voluptatem!</p>
+                    <button type="button" class="btn btn-light">Portafolio</button>
                 </div>
                 <div class="col-md-6">
-                    <h2>Lorem, ipsum dolor.</h2>
+                    <h2>Curriculum</h2>
                     <p style="text-align:justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed incidunt explicabo, doloribus vel eveniet harum fugiat, quis iusto ex veritatis tenetur numquam, voluptas corporis fuga. Explicabo inventore unde ut voluptatem!</p>
+                    <button type="button" class="btn btn-light">Descargar</button>
                 </div>
             </div>
         </div>
