Actualizacion de contenidos

--- a/index.html
+++ b/index.html
@@ -93,12 +93,14 @@
                 <div class="card">
                     <img src="img-nc/web-static.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                    <h5 class="card-title">Página Web Básica</h5>
-                    <p class="card-text" style="text-align:justify">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">Página web Básica</h5>
+                    <p class="card-text" style="text-align:justify">
+                        Este tipo de páginas se caracterizan porque muestran una información permanente en la que el usuario no puede interactuar con la página excepto para leer el contenido. No utilizan bases de datos, sino que la información reside en el servidor, por lo que para modificar el mismo hay que acceder al server y cambiar su contenido. Este tipo de páginas se usan para webs meramente informativas
+                    </p>
                         <ul class="list-group" style="text-align: left;">
-                        <li class="list-group-item">Cras justo odio</li>
-                        <li class="list-group-item">Dapibus ac facilisis in</li>
-                        <li class="list-group-item">Morbi leo risus</li>
+                        <li class="list-group-item">Requiere compra de dominio</li>
+                        <li class="list-group-item">Hosting gratuito</li>
+                        <li class="list-group-item">Diseño responsivo</li>
                         </ul>
                     <p class="card-text"><small class="text-muted">Costo base 300$</small></p>
                     </div>
@@ -106,13 +108,15 @@
                 <div class="card">
                     <img src="img-nc/paginaweb.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                    <h5 class="card-title">Página Web Completa</h5>
-                    <p class="card-text" style="text-align:justify">This card has supporting text below as a natural lead-in to additional content.</p>
+                    <h5 class="card-title">Página web dinámica</h5>
+                    <p class="card-text" style="text-align:justify">
+                        Al contrario que las páginas webs estáticas, en las webs dinámicas los contenidos pueden ser modificados por parte de los usuarios que las visitan y se les permite crear o modificar el aspecto de la misma a través de la misma navegación con formularios, texto, imágenes, vídeos, etc. Interactúan con una base de datos en la que se guardan cada uno de los registros de los usuarios.
+                    </p>
                     <ul class="list-group" style="text-align: left;">
-                        <li class="list-group-item">Cras justo odio</li>
-                        <li class="list-group-item">Dapibus ac facilisis in</li>
-                        <li class="list-group-item">Morbi leo risus</li>
-                        <li class="list-group-item">Porta ac consectetur ac</li>
+                        <li class="list-group-item">Requiere compra de dominio</li>
+                        <li class="list-group-item">Requiere alojamiento</li>
+                        <li class="list-group-item">Diseño responsivo</li>
+                        <li class="list-group-item">Altamente escalable</li>
                         </ul>
                     <p class="card-text"><small class="text-muted">Costo base 500$</small></p>
                     </div>
@@ -120,14 +124,25 @@
                 <div class="card">
                     <img src="img-nc/appweb.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                    <h5 class="card-title">Aplicación Web</h5>
-                    <p class="card-text" style="text-align:justify">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    <h5 class="card-title">Pagina web corporativa</h5>
+                    <p class="card-text" style="text-align:justify">
+                        Según el negocio o función:
+                        <ul style="text-align:justify">
+                            <li>Tiendas online / eCommerce</li>
+                            <li>Sitios web educativos</li>
+                            <li>Blogs</li>
+                            <li>Foros</li>
+                            <li>Páginas de recursos y descargas</li>
+                            <li>Sitios webs de noticias</li>
+                            <li>Sitios de consumo de vídeo</li>
+                        </ul>
+                    </p>
                     <ul class="list-group" style="text-align: left;">
-                        <li class="list-group-item">Cras justo odio</li>
-                        <li class="list-group-item">Dapibus ac facilisis in</li>
-                        <li class="list-group-item">Morbi leo risus</li>
-                        <li class="list-group-item">Porta ac consectetur ac</li>
-                        <li class="list-group-item">Vestibulum at eros</li>
+                        <li class="list-group-item">Requiere compra de dominio</li>
+                        <li class="list-group-item">Requiere alojamiento</li>
+                        <li class="list-group-item">Diseño responsivo</li>
+                        <li class="list-group-item">Funcionalidades específicas</li>
+                        <li class="list-group-item">CEO incluido</li> 
                         </ul>
                     <p class="card-text"><small class="text-muted">Costo base 1000$</small></p>
                     </div>
@@ -156,14 +171,21 @@
                 <div class="col-md-6">
                     <div class="info-left">
                         <h2>Hola soy Diego diseñador web freelance</h2>
-                        <h4 style="text-align:justify">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis labore nemo error, cumque magni aperiam fuga quasi vel consequatur tempora perferendis at voluptatibus ut veritatis inventore optio quo tenetur suscipit?</h4>
+                        <p style="text-align:justify">
+                            Soy autodidacta, desde muy joven estoy programando en diferentes lenguajes pero lo que más me gusta es la
+                            programación de sitios web y el diseño de estos, lo que se lo he aprendido mediante la practica, elaboración 
+                            de proyectos propios y el estudio de
+                            varios cursos tanto en youtube, como cursos de pago en plataformas como: Udemy, Platzi, Edutin, Miríadax, Google Learn
+                            etc. Además soy Tecnico de administración de sistemas informaticos y estudiante de pedagogía de la Informatica en 
+                            la Universidad Central del Ecuador. 
+                        </p>
                         <!--<a href="#" class="btn btn-outline-secondary header-btn">Leer más</a>-->
                         <button type="button" class="btn btn-outline-info">Leer más</button>
                     </div>
                 </div>
                 <div class="col-md-6 my-auto">
                     <div class="info-right">
-                        <img src="img-nc/student-849825_960_720.webp" style="width: 100%;"  id="img2">
+                        <img src="img-nc/student-849825_960_720.webp" style="width: 100%;    "  id="img2">
                     </div>
                 </div>
             </div>
@@ -176,12 +198,14 @@
             <div class="row my-5">
                 <div class="col-md-6">
                     <h2>Trabajos realizados</h2>
-                    <p style="text-align:justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed incidunt explicabo, doloribus vel eveniet harum fugiat, quis iusto ex veritatis tenetur numquam, voluptas corporis fuga. Explicabo inventore unde ut voluptatem!</p>
+                    <p style="text-align:justify">Aquí te dejo algunos de mis trabajos más destacados.</p>
                     <button type="button" class="btn btn-light">Portafolio</button>
                 </div>
                 <div class="col-md-6">
                     <h2>Curriculum</h2>
-                    <p style="text-align:justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed incidunt explicabo, doloribus vel eveniet harum fugiat, quis iusto ex veritatis tenetur numquam, voluptas corporis fuga. Explicabo inventore unde ut voluptatem!</p>
+                    <p style="text-align:justify">
+                        Si tienes alguna oferta de trabajo que ofrecerme aquí te dejo mi  Curriculum. 
+                    </p>
                     <button type="button" class="btn btn-light">Descargar</button>
                 </div>
             </div>
