Actualizacion colores del list

--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
                         Este tipo de páginas se caracterizan porque muestran una información permanente en la que el usuario no puede interactuar con la página excepto para leer el contenido. No utilizan bases de datos, sino que la información reside en el servidor, por lo que para modificar el mismo hay que acceder al server y cambiar su contenido. Este tipo de páginas se usan para webs meramente informativas
                     </p>
                         <ul class="list-group" style="text-align: left;">
-                        <li class="list-group-item">Requiere compra de dominio</li>
-                        <li class="list-group-item">Hosting gratuito</li>
-                        <li class="list-group-item">Diseño responsivo</li>
+                        <li class="list-group-item list-group-item-warning">Requiere compra de dominio</li>
+                        <li class="list-group-item list-group-item-info">Hosting gratuito</li>
+                        <li class="list-group-item list-group-item-info">Diseño responsivo</li>
                         </ul>
                     <p class="card-text"><small class="text-muted">Costo base 300$</small></p>
                     </div>
@@ -113,10 +113,10 @@
                         Al contrario que las páginas webs estáticas, en las webs dinámicas los contenidos pueden ser modificados por parte de los usuarios que las visitan y se les permite crear o modificar el aspecto de la misma a través de la misma navegación con formularios, texto, imágenes, vídeos, etc. Interactúan con una base de datos en la que se guardan cada uno de los registros de los usuarios.
                     </p>
                     <ul class="list-group" style="text-align: left;">
-                        <li class="list-group-item">Requiere compra de dominio</li>
-                        <li class="list-group-item">Requiere alojamiento</li>
-                        <li class="list-group-item">Diseño responsivo</li>
-                        <li class="list-group-item">Altamente escalable</li>
+                        <li class="list-group-item list-group-item-warning">Requiere compra de dominio</li>
+                        <li class="list-group-item list-group-item-warning">Requiere alojamiento</li>
+                        <li class="list-group-item list-group-item-info">Diseño responsivo</li>
+                        <li class="list-group-item list-group-item-info">Altamente escalable</li>
                         </ul>
                     <p class="card-text"><small class="text-muted">Costo base 500$</small></p>
                     </div>
@@ -138,11 +138,11 @@
                         </ul>
                     </p>
                     <ul class="list-group" style="text-align: left;">
-                        <li class="list-group-item">Requiere compra de dominio</li>
-                        <li class="list-group-item">Requiere alojamiento</li>
-                        <li class="list-group-item">Diseño responsivo</li>
-                        <li class="list-group-item">Funcionalidades específicas</li>
-                        <li class="list-group-item">CEO incluido</li> 
+                        <li class="list-group-item list-group-item-warning">Requiere compra de dominio</li>
+                        <li class="list-group-item list-group-item-warning">Requiere alojamiento</li>
+                        <li class="list-group-item list-group-item-info">Diseño responsivo</li>
+                        <li class="list-group-item list-group-item-info">Funcionalidades específicas</li>
+                        <li class="list-group-item list-group-item-info">CEO incluido</li> 
                         </ul>
                     <p class="card-text"><small class="text-muted">Costo base 1000$</small></p>
                     </div>
@@ -179,8 +179,9 @@
                             etc. Además soy Tecnico de administración de sistemas informaticos y estudiante de pedagogía de la Informatica en 
                             la Universidad Central del Ecuador. 
                         </p>
+                        <img src="img-nc/d-1935811_1920.png" style="width: 25%;">
                         <!--<a href="#" class="btn btn-outline-secondary header-btn">Leer más</a>-->
-                        <button type="button" class="btn btn-outline-info">Leer más</button>
+                        <!--<button type="button" class="btn btn-outline-info">Leer más</button>-->
                     </div>
                 </div>
                 <div class="col-md-6 my-auto">
