--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content=" Diego Bracero: Diseñador web freelance, servicio de creación de páginas web corporativas en base a grandes y pequeños presupuestos utilizando tecnologías como: HTML, CSS, Javascript, Bootstrap, MongoDB, SQL y NodeJS.">
+    <meta name="author" content="Diego Bracero">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>diegobraceroweb</title>
     <!--GOOGLE FONTS-->
@@ -10,7 +12,7 @@
     <!--javascript-->
     <script type="text/javascript" src="js/main.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
-    <!--Bootstrap 4-->  
+    <!--Bootstrap 4-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <!--CUSTOM CSS-->
     <link rel="stylesheet" href="css/main.css">
