--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Diego Bracero">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>diegobraceroweb</title>
+    <link rel="shortcut icon" type="image/x-icon" href="img-nc/logo.ico">
     <!--GOOGLE FONTS-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
 
