--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                             <i class="fab fa-facebook-f"></i>
                         </a>
         
-                        <a class="btn2" href="https://twitter.com/BraceroDiego" target="_blank">
+                        <a class="btn2" href="https://twitter.com/dgbracero" target="_blank">
                             <i class="fab fa-twitter"></i>
                         </a>
         
